<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="10dp"
    android:layout_margin="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:id="@+id/address"
        android:hint="@string/address"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="match_parent"
        android:id="@+id/stationLat"
        android:hint="@string/latitude"
        app:layout_constraintTop_toBottomOf="@id/address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="match_parent"
        android:id="@+id/stationLong"
        android:hint="@string/longitude"
        app:layout_constraintTop_toBottomOf="@id/stationLat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:id="@+id/distance"
        android:hint="@string/distance"
        app:layout_constraintTop_toBottomOf="@id/stationLong"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="match_parent"
        android:id="@+id/stationName"
        android:hint="@string/stationName"
        app:layout_constraintTop_toBottomOf="@id/distance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="match_parent"
        android:id="@+id/isoperational"
        android:hint="@string/isOperational"
        app:layout_constraintTop_toBottomOf="@id/stationName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:id="@+id/connectionCount"
        android:hint="@string/connectionCount"
        app:layout_constraintTop_toBottomOf="@id/isoperational"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>